# firefly-bills-analyzer

./: .butler-version  .env.example  .gitignore  .pymarkdown  CHANGELOG.md  CLAUDE.md  Firefly_bills_analyzer_spec.md .md  LICENSE  Makefile  README.md  REQUIREMENTS_BDD.md  REQUIREMENTS_BUTLER_PULL.md  pyproject.toml  requirements-review.csv
.butler/: CHANGELOG.md  Makefile  README.md  REQUIREMENTS_AGENT_SKILLS.md  REQUIREMENTS_BUTLER_PULL.md  REQUIREMENTS_TASK_WORKFLOW.md  pyproject.toml
.butler/mcp/: server.py
.butler/scaffold/: pyproject.toml.tmpl
.butler/templates/: task-drafter.agent.md.tmpl  workflow-guardian.agent.md.tmpl
.butler/tests/: test_butler_pull_governance_regen.py  test_git_ops.py  test_makefile_cli_flag_drift.py
.github/: copilot-instructions.md
.github/agents/: bug-triage.agent.md  characterization-test-writer.agent.md  pr-reviewer.agent.md  requirements-drafter.agent.md  task-drafter.agent.md  workflow-guardian.agent.md
claude-agents/: workflow-guardian.agent.md
docs/: REQUIREMENTS.md  REQUIREMENTS_new.md
docs/tasks/: README.md  TASK-001-project-scaffold.md  TASK-002-fetch-transactions.md  TASK-003-identify-recurring-payments.md  TASK-004-create-bills.md  TASK-005-cli-and-dry-run.md  TASK-005-fetch-withdrawal-transactions.md  TASK-006-category-filtering.md  TASK-006-create-bill.md  TASK-007-cache-layer.md  TASK-008-category-aware-bill-naming.md  TASK-009-performance-benchmark.md  TASK-010-real-data-benchmark.md  TASK-011-source-account-display.md  TASK-012-amount-clustering-and-billing-events.md  TASK-013-cli-fetch-progress-bar.md  TASK-014-account-filtering.md  TASK-014-source-account-partition-and-corroborated-clustering.md  TASK-015-payee-filtering.md  TASK-016-account-filtering.md  TASK-017-payee-filtering.md  TASK-018-solo-transaction-interval-bucket-split.md  TASK-040-Declare-butler-core-as-dev-dependency-in-consumer-projects.md  TASK-043-fix-task-command-make-recursion.md  TASK-049-document-manual-venv-activation.md  TASK-050-extract-shared-agent-skills.md  TASK-052-requirements-butler-pull-single-source-scoped-paths.md  TASK-053-butler-trim-guards-unregenerated-content.md
lib/firefly-python-api/: .butler-version  CLAUDE.md
scripts/: benchmark_real_data.py  validate_agents.py
src/butler_cli/: __main__.py
src/butler_core/: git_ops.py
src/firefly_bills_analyzer/: __init__.py  __main__.py  account_filter.py  analyzer.py  bills_creator.py  cache.py  category_filter.py  config.py  exporter.py  fetcher.py  payee_filter.py
src/firefly_python_api/: __init__.py  _client.py  _config.py  (+1 more)
tests/: benchmark_analyzer.py  test_account_filter.py  test_analyzer.py  test_bills_creator.py  test_butler_pull_governance_regen.py  test_cache.py  test_category_filter.py  test_check_agents_sync.py  test_cli.py  test_client.py  test_config.py  test_exporter.py  test_fetcher.py  test_main.py  test_no_make_recursion.py  test_payee_filter.py  test_smoke.py  test_sync.py
(+15 files in other folders)
