[project]
name = "firefly-python-api"
version = "0.1.0"
description = "Python client library for the Firefly III REST API — shared HTTP layer with credential management and API coverage for accounts, transactions, and reporting resources."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "pymarkdown",
    "complexipy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true

[tool.bandit]
skips = []

[tool.pytest.ini_options]
testpaths = ["tests"]
